@@ -1,5 +1,12 @@
 2008-07-01  kitone  <kitone@gna.org>
 
+	* src/SubtitleModel.cc:
+	* src/SubtitleModel.h:
+	Introduce new real values for the time. 
+	start_value, end_value, duration_value.
+
+2008-07-01  kitone  <kitone@gna.org>
+
 	* src/Makefile.am:
 	* src/TimeUtility.cc:
 	* src/TimeUtility.h:
